app_microservices/fdd.web/k8s/k8s.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fddui
  labels:
    app: fddui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fddui
  template:
    metadata:
      labels:
        app: fddui
    spec:
      containers:
      - name: fddui
        image: <!--image-->
        ports:
        - containerPort: 80
