app_microservices/fdd.web/k8s/k8s.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: fddui
  labels:
    app: fddui
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: fddui
